fixed overlapping, really need to learn css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background: #121212;
-  margin: 0;
+  margin: 30px 0;
 }
 
 .title {
@@ -28,15 +28,14 @@ body {
 
 .boardContainer {
   /* display: flex; */
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-top: 20rem;
-  transform: translate(-50%, -40%);
-  outline: 2px solid white;
+  display: flex;
+  align-items: center;
 }
 
 .board {
+  outline: 2px solid white;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .row {
@@ -87,4 +86,9 @@ body {
   font-size: 1.5rem;
   border: none;
   padding: 5px;
+}
+
+.gameContainer {
+  display: flex;
+  flex-direction: column;
 }
